--- a/src/index.html
+++ b/src/index.html
@@ -47,22 +47,25 @@
   </head>
 
   <body>
-    <app-root>
-      <!-- Spinner Start -->
-      <div
-        id="spinner"
-        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
-      >
+    <div class="container-xxl bg-white p-0">
+      <app-root>
+        <!-- Spinner Start -->
         <div
-          class="spinner-grow text-primary"
-          style="width: 3rem; height: 3rem"
-          role="status"
+          id="spinner"
+          class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
         >
-          <span class="sr-only">Loading...</span>
+          <div
+            class="spinner-grow text-primary"
+            style="width: 3rem; height: 3rem"
+            role="status"
+          >
+            <span class="sr-only">Loading...</span>
+          </div>
         </div>
-      </div>
-      <!-- Spinner End -->
-    </app-root>
+        <!-- Spinner End -->
+      </app-root>
+    </div>
+ 
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
